2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-shared/shared.exp: Pass $PLT_CFLAGS to ld_compile.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/crossref.exp (CC): Save and restore.  Append
	$PLT_CFLAGS.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/i386.exp (run_cc_link_tests): Add $PLT_CFLAGS to
	-fPIC if needed.
	* ld-x86-64/mpx.exp (run_cc_link_tests): Likewise.
	* ld-x86-64/x86-64.exp (run_cc_link_tests): Likewise.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvsb/elfvsb.exp (visibility_run): Pass $PLT_CFLAGS to
	ld_compile.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp (build_vers_lib_no_pic): Pass $PLT_CFLAGS
	to build_binary.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* config/default.exp (PLT_CFLAGS): New.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/compress.exp (build_tests): Replace -g with -ggdb3.
	* ld-elf/zlibbegin.rS: Also expect "GC".
	* ld-elf/zlibnormal.rS: Likewise.

2015-07-16  Jiong Wang  <jiong.wang@arm.com>

	* ld-aarch64/tls-tiny-ld.s: New file.
	* ld-aarch64/tls-tiny-ld.d: Ditto.
	* ld-aarch64/aarch64-elf.exp: Run new test.

2015-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/zlibbegin.rS: Updated to .debug_.* with the
	SHF_COMPRESSED bit.
	* ld-elf/zlibnormal.rS: Likewise.

2015-07-09  Catherine Moore  <clm@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-08.d: Update expected output.
	* ld-mips-elf/attr-gnu-4-09.d: New.
	* ld-mips-elf/attr-gnu-4-19.d: New.
	* ld-mips-elf/attr-gnu-4-29.d: New.
	* ld-mips-elf/attr-gnu-4-39.d: New.
	* ld-mips-elf/attr-gnu-4-49.d: New.
	* ld-mips-elf/attr-gnu-4-59.d: New.
	* ld-mips-elf/attr-gnu-4-69.d: New.
	* ld-mips-elf/attr-gnu-4-79.d: New.
	* ld-mips-elf/attr-gnu-4-89.d: New.
	* ld-mips-elf/attr-gnu-4-9.s: New.
	* ld-mips-elf/mips-elf.exp: Run new tests.

2015-07-08  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	* ld-avr/gc-section-debugline.d: New test.
	* ld-avr/per-function-debugline.s: Source for new test.
